<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/options"
        android:icon="@drawable/other"
        android:showAsAction="always"
        android:title="@string/option">
        <menu>
            <group
                android:id="@+id/group1"
                android:checkableBehavior="all" >
                <item
                    android:id="@+id/flash"
                    android:title="@string/flash"/>               
                <item
                    android:id="@+id/antibanding"
                    android:title="@string/anti_banding"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/colorEffect"
        android:icon="@drawable/color"
        android:showAsAction="always"
        android:title="@string/coloreffects">
        <menu>
            <group
                android:id="@+id/group2"
                android:checkableBehavior="single" >
                <item
                    android:id="@+id/none"
                    android:checked="true"
                    android:title="@string/none"/>
                <item
                    android:id="@+id/blackwhite"
                    android:title="@string/blackwhite"/>
                <item
                    android:id="@+id/negative"
                    android:title="@string/negative"/>
                <item
                    android:id="@+id/sepia"
                    android:title="@string/sepia"/>
                <item
                    android:id="@+id/aqua"
                    android:title="@string/aqua"/>
            </group>
        </menu>
    </item>
    
    <item
        android:id="@+id/scene"
        android:icon="@drawable/scene"
        android:showAsAction="always"
        android:title="@string/scene">
        <menu>
            <group
                android:id="@+id/group6"
                android:checkableBehavior="single" >
                
                <item
                    android:id="@+id/none_scene"
                    android:checked="true"
                    android:title="@string/none"/>
                <item
                    android:id="@+id/night"
                    android:title="@string/night"/>
                <item
                    android:id="@+id/snow"
                    android:title="@string/snow"/>
                <item
                    android:id="@+id/beach"
                    android:title="@string/beach"/>
                <item
                    android:id="@+id/candlelight"
                    android:title="@string/candlelight"/>
            </group>
        </menu>
    </item>
    
    <item
        android:id="@+id/focus"
        android:icon="@drawable/focus"
        android:showAsAction="always"
        android:title="@string/focus">
        <menu>
            <group
                android:id="@+id/group7"
                android:checkableBehavior="single" >
                <item
                    android:id="@+id/focus_auto"
                    android:checked="true"
                    android:title="@string/auto"/>
                <item
                    android:id="@+id/fixed"
                    android:title="@string/fixed"/>
                <item
                    android:id="@+id/macro"
                    android:title="@string/macro"/>
                <item
                    android:id="@+id/infinity"
                    android:title="@string/infinity"/>
            </group>
        </menu>
    </item>
    
	<item
        android:id="@+id/whithebalance"
        android:icon="@drawable/whitebalance"
        android:showAsAction="always"
        android:title="@string/whitebalance">
        <menu>
            <group
                android:id="@+id/group3"
                android:checkableBehavior="single" >
                <item
                    android:id="@+id/auto"
                    android:checked="true"
                    android:title="@string/auto"/>
                <item
                    android:id="@+id/daylight"
                    android:title="@string/daylight"/>
                <item
                    android:id="@+id/cloudy"
                    android:title="@string/cloudy"/>
                <item
                    android:id="@+id/incandescent"
                    android:title="@string/incandescent"/>
                <item
                    android:id="@+id/fluorescent"
                    android:title="@string/fluorescent"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/size"
        android:icon="@drawable/size"
        android:showAsAction="always"
        android:title="@string/size">
        <menu>
            <group
                android:id="@+id/group4"
                android:checkableBehavior="single" >
                <item
                    android:id="@+id/size640_480"
                    android:title="@string/l640_480"/>
                <item
                    android:id="@+id/size800_480"
                    android:title="@string/l800_480"/>
                <item
                    android:id="@+id/size2048_1232"
                    android:checked="true"
                    android:title="@string/l2048_1232"/>
                <item
                    android:id="@+id/size2048_1536"
                    android:title="@string/l2048_1536"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/format"
        android:icon="@drawable/png"
        android:showAsAction="always"
        android:title="@string/format">
        <menu>
            <group
                android:id="@+id/group5"
                android:checkableBehavior="single" >
                <item
                    android:id="@+id/jpg"
                    android:checked="true"
                    android:title="@string/jpg"/>
                <item
                    android:id="@+id/png"
                    android:title="@string/png"/>
            </group>
        </menu>
    </item>
</menu>